#5: Fin de la définition des prototypes de Graph Manager choix des différente structure de donné utilisé. Choix de création d'une classe abstraite afin de definir les type de parametres pour les edges et pour les nodes;

--- a/latex/dir_b5e0a4c2abe2f4cb1bbfa97b52316a11.tex
+++ b/latex/dir_b5e0a4c2abe2f4cb1bbfa97b52316a11.tex
@@ -1,8 +1,7 @@
 \hypertarget{dir_b5e0a4c2abe2f4cb1bbfa97b52316a11}{\section{graph\-Utilities Directory Reference}
 \label{dir_b5e0a4c2abe2f4cb1bbfa97b52316a11}\index{graph\-Utilities Directory Reference@{graph\-Utilities Directory Reference}}
 }
-Directory dependency graph for graph\-Utilities\-:
-\nopagebreak
+Directory dependency graph for graph\-Utilities\-:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -11,6 +10,8 @@ Directory dependency graph for graph\-Utilities\-:
 \end{figure}
 \subsection*{Files}
 \begin{DoxyCompactItemize}
+\item 
+file {\bfseries graph\-Manager.\-cpp}
 \item 
 file {\bfseries graph\-Manager.\-h}
 \item 
