--- a/latex/classGraphManager.tex
+++ b/latex/classGraphManager.tex
@@ -13,9 +13,9 @@ is a class that create an manage some graph. This class can create paramethized 
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-leda\-::ugraph \hyperlink{classGraphManager_aa01d24fb185701aaab0fc7f2ac70640b}{gen\-Random\-Graph} (int n, int e)
+ugraph \hyperlink{classGraphManager_aa01d24fb185701aaab0fc7f2ac70640b}{gen\-Random\-Graph} (int n, int e)
 \begin{DoxyCompactList}\small\item\em This creates a random undirected graph with n nodes and e edge. \end{DoxyCompactList}\item 
-leda\-::ugraph \hyperlink{classGraphManager_acbbbcd2df22832be21867236d60cc8e9}{gen\-Graph\-From\-File} (string place)
+ugraph \hyperlink{classGraphManager_acbbbcd2df22832be21867236d60cc8e9}{gen\-Graph\-From\-File} (string place)
 \begin{DoxyCompactList}\small\item\em This creates a undirected graph from a G\-M\-L graph. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
@@ -66,7 +66,6 @@ ugraph
 \end{DoxyReturn}
 
 
-The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
+The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-graph\-Utilities/graph\-Manager.\-h\item 
-graph\-Utilities/graph\-Manager.\-cpp\end{DoxyCompactItemize}
+graph\-Utilities/graph\-Manager.\-h\end{DoxyCompactItemize}
