#8: integration du gml

--- a/latex/classGraphManager.tex
+++ b/latex/classGraphManager.tex
@@ -10,62 +10,12 @@ is a class that create an manage some graph. This class can create paramethized 
 
 {\ttfamily \#include $<$graph\-Manager.\-h$>$}
 
-\subsection*{Public Member Functions}
-\begin{DoxyCompactItemize}
-\item 
-ugraph \hyperlink{classGraphManager_aa01d24fb185701aaab0fc7f2ac70640b}{gen\-Random\-Graph} (int n, int e)
-\begin{DoxyCompactList}\small\item\em This creates a random undirected graph with n nodes and e edge. \end{DoxyCompactList}\item 
-ugraph \hyperlink{classGraphManager_acbbbcd2df22832be21867236d60cc8e9}{gen\-Graph\-From\-File} (string place)
-\begin{DoxyCompactList}\small\item\em This creates a undirected graph from a G\-M\-L graph. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
 is a class that create an manage some graph. This class can create paramethized ugraph from a file or randomly. 
 
-\subsection{Member Function Documentation}
-\hypertarget{classGraphManager_acbbbcd2df22832be21867236d60cc8e9}{\index{Graph\-Manager@{Graph\-Manager}!gen\-Graph\-From\-File@{gen\-Graph\-From\-File}}
-\index{gen\-Graph\-From\-File@{gen\-Graph\-From\-File}!GraphManager@{Graph\-Manager}}
-\subsubsection[{gen\-Graph\-From\-File}]{\setlength{\rightskip}{0pt plus 5cm}Graph\-Manager\-::gen\-Graph\-From\-File (
-\begin{DoxyParamCaption}
-\item[{string}]{place}
-\end{DoxyParamCaption}
-)}}\label{classGraphManager_acbbbcd2df22832be21867236d60cc8e9}
-
-
-This creates a undirected graph from a G\-M\-L graph. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em place} & \\
-\hline
-\end{DoxyParams}
-\begin{DoxyReturn}{Returns}
-ugraph 
-\end{DoxyReturn}
-\hypertarget{classGraphManager_aa01d24fb185701aaab0fc7f2ac70640b}{\index{Graph\-Manager@{Graph\-Manager}!gen\-Random\-Graph@{gen\-Random\-Graph}}
-\index{gen\-Random\-Graph@{gen\-Random\-Graph}!GraphManager@{Graph\-Manager}}
-\subsubsection[{gen\-Random\-Graph}]{\setlength{\rightskip}{0pt plus 5cm}Graph\-Manager\-::gen\-Random\-Graph (
-\begin{DoxyParamCaption}
-\item[{int}]{n, }
-\item[{int}]{e}
-\end{DoxyParamCaption}
-)}}\label{classGraphManager_aa01d24fb185701aaab0fc7f2ac70640b}
-
-
-This creates a random undirected graph with n nodes and e edge. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em n} & the number of node \\
-\hline
-{\em e} & the number of edge \\
-\hline
-\end{DoxyParams}
-\begin{DoxyReturn}{Returns}
-ugraph 
-\end{DoxyReturn}
-
-
-The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
+The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
-graph\-Utilities/graph\-Manager.\-h\end{DoxyCompactItemize}
+graph\-Utilities/graph\-Manager.\-h\item 
+graph\-Utilities/graph\-Manager.\-cpp\end{DoxyCompactItemize}
