--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,4 +1,5 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\-:\begin{DoxyCompactList}
+\item\contentsline{section}{\hyperlink{structgraphChild}{graph\-Child} \\*Struct that contain a graph link to an other graph }{\pageref{structgraphChild}}{}
 \item\contentsline{section}{\hyperlink{classGraphManager}{Graph\-Manager} \\*Class that create and manage some graph. This class can create paramethized undirected graph from a file or randomly }{\pageref{classGraphManager}}{}
 \end{DoxyCompactList}
