--- a/latex/classGraphManager.tex
+++ b/latex/classGraphManager.tex
@@ -19,16 +19,16 @@ is a class that create and manage some graph. This class can create paramethized
 \hypertarget{classGraphManager_af7e1254c8c40b94ce005cef87c5b649a}{void \hyperlink{classGraphManager_af7e1254c8c40b94ce005cef87c5b649a}{add\-Edge} (void)}\label{classGraphManager_af7e1254c8c40b94ce005cef87c5b649a}
 
 \begin{DoxyCompactList}\small\item\em add an edge to the main graph \end{DoxyCompactList}\item 
-graph\-Child \hyperlink{classGraphManager_a9433db8c77f8c9bd4744a35c7c553928}{gen\-Child} (void)
+\hyperlink{structgraphChild}{graph\-Child} \hyperlink{classGraphManager_a9433db8c77f8c9bd4744a35c7c553928}{gen\-Child} (void)
 \begin{DoxyCompactList}\small\item\em generate a graph and push it in the list of graph child. \end{DoxyCompactList}\item 
-void \hyperlink{classGraphManager_a6732352df1ad2fa1e6953759e960918d}{add\-Node\-Child} (graph\-Child \&g\-C, ogdf\-::node \&n)
+void \hyperlink{classGraphManager_a6732352df1ad2fa1e6953759e960918d}{add\-Node\-Child} (\hyperlink{structgraphChild}{graph\-Child} \&g\-C, ogdf\-::node \&n)
 \begin{DoxyCompactList}\small\item\em add a node to a graph corresponding to a node of the main graph \end{DoxyCompactList}\item 
-void \hyperlink{classGraphManager_a9888881ba43a607e73791ddddad4444b}{add\-Edge\-Child} (graph\-Child \&g\-C, ogdf\-::edge \&e)
+void \hyperlink{classGraphManager_a9888881ba43a607e73791ddddad4444b}{add\-Edge\-Child} (\hyperlink{structgraphChild}{graph\-Child} \&g\-C, ogdf\-::edge \&e)
 \begin{DoxyCompactList}\small\item\em add an edge to a graph corresponding to an edge of the main graph \end{DoxyCompactList}\item 
-void \hyperlink{classGraphManager_a08cbf91847265d125d5b58252263306c}{export\-G\-M\-L} (ogdf\-::\-String path)
-\begin{DoxyCompactList}\small\item\em export the current graph and its attributes to a gml file. \end{DoxyCompactList}\item 
-void \hyperlink{classGraphManager_a706fec263f07760311b3c186daea280a}{export\-Child\-Gml} (graph\-Child \&g\-C, ogdf\-::\-String path)
-\begin{DoxyCompactList}\small\item\em export the current graph with some color on the edges and nodes that correspond of the nodes and edges of the graph child. \end{DoxyCompactList}\end{DoxyCompactItemize}
+std\-::vector$<$ \hyperlink{structgraphChild}{graph\-Child} $>$ \hyperlink{classGraphManager_a24cc3fef7b6609b81f27977aa7924426}{get\-Children} (void)
+\item 
+void \hyperlink{classGraphManager_a1b15356c020e8d8e88d3910be51ed7e8}{export\-G\-M\-L} (ogdf\-::\-String path, bool default\-Layout)
+\begin{DoxyCompactList}\small\item\em export the current graph and its attributes to a gml file. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
@@ -39,7 +39,7 @@ is a class that create and manage some graph. This class can create paramethized
 \index{add\-Edge\-Child@{add\-Edge\-Child}!GraphManager@{Graph\-Manager}}
 \subsubsection[{add\-Edge\-Child}]{\setlength{\rightskip}{0pt plus 5cm}Graph\-Manager\-::add\-Edge\-Child (
 \begin{DoxyParamCaption}
-\item[{graph\-Child \&}]{g\-C, }
+\item[{{\bf graph\-Child} \&}]{g\-C, }
 \item[{ogdf\-::edge \&}]{e}
 \end{DoxyParamCaption}
 )}}\label{classGraphManager_a9888881ba43a607e73791ddddad4444b}
@@ -58,7 +58,7 @@ add an edge to a graph corresponding to an edge of the main graph
 \index{add\-Node\-Child@{add\-Node\-Child}!GraphManager@{Graph\-Manager}}
 \subsubsection[{add\-Node\-Child}]{\setlength{\rightskip}{0pt plus 5cm}Graph\-Manager\-::add\-Node\-Child (
 \begin{DoxyParamCaption}
-\item[{graph\-Child \&}]{g\-C, }
+\item[{{\bf graph\-Child} \&}]{g\-C, }
 \item[{ogdf\-::node \&}]{n}
 \end{DoxyParamCaption}
 )}}\label{classGraphManager_a6732352df1ad2fa1e6953759e960918d}
@@ -73,32 +73,14 @@ add a node to a graph corresponding to a node of the main graph
 {\em n} & node from the main graph \\
 \hline
 \end{DoxyParams}
-\hypertarget{classGraphManager_a706fec263f07760311b3c186daea280a}{\index{Graph\-Manager@{Graph\-Manager}!export\-Child\-Gml@{export\-Child\-Gml}}
-\index{export\-Child\-Gml@{export\-Child\-Gml}!GraphManager@{Graph\-Manager}}
-\subsubsection[{export\-Child\-Gml}]{\setlength{\rightskip}{0pt plus 5cm}Graph\-Manager\-::export\-Child\-Gml (
-\begin{DoxyParamCaption}
-\item[{graph\-Child \&}]{g\-C, }
-\item[{ogdf\-::\-String}]{path}
-\end{DoxyParamCaption}
-)}}\label{classGraphManager_a706fec263f07760311b3c186daea280a}
-
-
-export the current graph with some color on the edges and nodes that correspond of the nodes and edges of the graph child. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em g\-C} & is the graph child \\
-\hline
-{\em path} & is the path of the output destination \\
-\hline
-\end{DoxyParams}
-\hypertarget{classGraphManager_a08cbf91847265d125d5b58252263306c}{\index{Graph\-Manager@{Graph\-Manager}!export\-G\-M\-L@{export\-G\-M\-L}}
+\hypertarget{classGraphManager_a1b15356c020e8d8e88d3910be51ed7e8}{\index{Graph\-Manager@{Graph\-Manager}!export\-G\-M\-L@{export\-G\-M\-L}}
 \index{export\-G\-M\-L@{export\-G\-M\-L}!GraphManager@{Graph\-Manager}}
 \subsubsection[{export\-G\-M\-L}]{\setlength{\rightskip}{0pt plus 5cm}Graph\-Manager\-::export\-G\-M\-L (
 \begin{DoxyParamCaption}
-\item[{ogdf\-::\-String}]{path}
+\item[{ogdf\-::\-String}]{path, }
+\item[{bool}]{default\-Layout}
 \end{DoxyParamCaption}
-)}}\label{classGraphManager_a08cbf91847265d125d5b58252263306c}
+)}}\label{classGraphManager_a1b15356c020e8d8e88d3910be51ed7e8}
 
 
 export the current graph and its attributes to a gml file. 
@@ -120,7 +102,17 @@ export the current graph and its attributes to a gml file.
 generate a graph and push it in the list of graph child. 
 
 \begin{DoxyReturn}{Returns}
-the graph\-Child generated 
+the \hyperlink{structgraphChild}{graph\-Child} generated 
+\end{DoxyReturn}
+\hypertarget{classGraphManager_a24cc3fef7b6609b81f27977aa7924426}{\index{Graph\-Manager@{Graph\-Manager}!get\-Children@{get\-Children}}
+\index{get\-Children@{get\-Children}!GraphManager@{Graph\-Manager}}
+\subsubsection[{get\-Children}]{\setlength{\rightskip}{0pt plus 5cm}Graph\-Manager\-::get\-Children (
+\begin{DoxyParamCaption}
+\item[{void}]{}
+\end{DoxyParamCaption}
+)}}\label{classGraphManager_a24cc3fef7b6609b81f27977aa7924426}
+\begin{DoxyReturn}{Returns}
+the vector containing all the children of the current graph. 
 \end{DoxyReturn}
 
 
